--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
           <div class="double-bounce2"></div>
         </div>
       </div>
-      <section class="kv w-640"><img src="https://picsum.photos/640/360" width="640" height="360" alt="主視覺"/></section>
       <section class="form w-640">
         <div class="text-center">
-          <h1>Google表單，輸入ID後自動帶入其它欄位資料</h1>
-          <p>筆記文：<a href="https://letswrite.tw/google-forms-id-data/" target="_blank">Let's Write</a></p>
+          <h1>Google商品測試</h1>
         </div>
         <div class="form-group">
           <label for="main_id">請輸入 ID（0101 - 0112）</label>
