--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="form-group">
           <label for="main_id">輸入ID</label>
-          <input class="form-control" id="main_id" type="number" v-model="id" @input="limitIdLen(id)"/>
+          <input class="form-control" id="main_id" type="text" v-model="id" @input="limitIdLen(id)"/>
         </div>
         <div class="two-col">
           <div class="col">
