--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
       <section class="form w-640">
         <div class="text-center">
-          <h1>Google基本資料</h1>
+          <h1>Google基本資料ver</h1>
         </div>
         <div class="form-group">
           <label for="main_id">輸入ID</label>
