--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
           <h1>Google基本資料測試</h1>
         </div>
         <div class="form-group">
-          <label for="main_id">輸入ID</label>
-          <input class="form-control" id="main_id" type="text" v-model="id" @input="limitIdLen(id)"/>
+          <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
         </div>
         <div class="two-col">
           <div class="col">
