--- a/index.html
+++ b/index.html
@@ -48,18 +48,17 @@
         <div class="text-center">
           <h1>Google基本資料測試</h1>
         </div>
-        <div class="form-group">
-          <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropdown button
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-  </ul>
-</div>
+        
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            選擇Id
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">F126144709</a></li>
+            <li><a class="dropdown-item" href="#">A226469431</a></li>
+          </ul>
         </div>
+        
         <div class="two-col">
           <div class="col">
             <div class="form-group">
