--- a/index.html
+++ b/index.html
@@ -49,15 +49,13 @@
           <h1>Google基本資料測試</h1>
         </div>
         
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            選擇Id
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">F126144709</a></li>
-            <li><a class="dropdown-item" href="#">A226469431</a></li>
-          </ul>
-        </div>
+        <div class="form-group">
+        <select>
+    <option>選擇Id</option>
+    <option>F126144709</option>
+    <option>A226469431</option>
+</select>
+          </div>
         
         <div class="two-col">
           <div class="col">
