--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </div>
         <div class="form-group">
           <label for="main_id">輸入ID</label>
-          <input class="form-control" id="main_id" type="text" v-model="id" @input="limitIdLen(id)"/>
+          <input class="form-control" id="main_id" type="text" list="typelist" placeholder="選擇Id" v-model="id" @input="limitIdLen(id)"/>
+<datalist id="typelist">
+　　<option>Dimond</option>
+　　<option>vertical</option>
+</datalist>
+          
         </div>
         <div class="two-col">
           <div class="col">
