--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <label for="main_id">輸入ID</label>
           <input class="form-control" id="main_id" type="text" list="typelist" placeholder="選擇Id" v-model="id" @input="limitIdLen(id)"/>
 <datalist id="typelist">
-　　<option>Dimond</option>
-　　<option>vertical</option>
+　　<option>F126144709</option>
+　　<option>A226469431</option>
 </datalist>
           
         </div>
