--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
         <div class="form-group">
           <label for="main_id">輸入ID</label>
           <input class="form-control" id="main_id" type="text" list="typelist" placeholder="選擇Id" v-model="id" @input="limitIdLen(id)"/>
-<datalist id="typelist">
-　　<option>F126144709</option>
-　　<option>A226469431</option>
-</datalist>
-          
+          <datalist id="typelist">
+            <option>F126144709</option>
+            <option>A226469431</option>
+          </datalist>
         </div>
+        
         <div class="two-col">
           <div class="col">
             <div class="form-group">
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_6TZJvn3Q630NSWjdOV6qoyeLcfQVSc_qPdsEow8wmEkpcw/viewform?embedded=true" width="640" height="337" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
               <label for="name">姓名</label>
               <div class="prepend">
                 <input class="form-control" id="name" type="text" v-model="person.name" disabled="disabled"/>
