--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Google表單，輸入ID後自動帶入其它欄位資料 - August - Let's Write</title>
-    <link rel="canonical" href="https://letswritetw.github.io/letswrite-google-forms-id-data/"/>
-    <meta property="og:url" content="https://letswritetw.github.io/letswrite-google-forms-id-data/"/>
+    <title>Google Test001</title>
     <meta property="fb:app_id" content="2435108729902508"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:site_name" content="Let's Write"/>
-    <meta property="og:title" content="Google表單，輸入ID後自動帶入其它欄位資料 - August - Let's Write"/>
-    <meta itemprop="name" content="Google表單，輸入ID後自動帶入其它欄位資料 - August - Let's Write"/>
+    <meta property="og:title" content="Google Test001"/>
+    <meta itemprop="name" content="Google Test001"/>
     <meta name="description" content="文章大綱"/>
     <meta property="og:description" content="文章大綱"/>
     <meta itemprop="description" content="文章大綱"/>
-    <meta itemprop="image" content="https://letswritetw.github.io/letswrite-google-forms-id-data/fb.jpg"/>
-    <meta property="og:image" content="https://letswritetw.github.io/letswrite-google-forms-id-data/fb.jpg"/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
-    <meta property="og:image:alt" content="Google表單，輸入ID後自動帶入其它欄位資料"/>
-    <link rel="shortcut icon" href="https://letswritetw.github.io/letswritetw/dist/img/logo_512.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="dist/style.min.css"/>
     <!-- Google Tag Manager-->
@@ -60,7 +51,6 @@
         <div class="two-col">
           <div class="col">
             <div class="form-group">
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_6TZJvn3Q630NSWjdOV6qoyeLcfQVSc_qPdsEow8wmEkpcw/viewform?embedded=true" width="640" height="337" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
               <label for="name">姓名</label>
               <div class="prepend">
                 <input class="form-control" id="name" type="text" v-model="person.name" disabled="disabled"/>
