--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <div class="double-bounce2"></div>
         </div>
       </div>
-      <section class="kv w-640"><img src="https://picsum.photos/640/360" width="640" height="360" alt="主視覺"/></section>
+      <section class="kv w-640"> </section>
       <section class="form w-640">
         <div class="text-center">
-          <h1>Google Test001</h1>
+          <h1>Google Test002</h1>
         </div>
         <div class="form-group">
           <label for="main_id">請輸入 ID（0101 - 0112）</label>
