--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js"></script>
   <p>AI 機器人店員：<span id='hello'></span></p>
 <p>客人：我需要<input type="text" id="pizzaNum" class="tag">個 Pizza 還有<input type="text" id="beerNum" class="tag">杯啤酒。
-    <input type="button" id="click" value="點餐完成" onclick="document.getElementById('hello').textContent = hello;">
+    <input type="button" id="click" value="點餐完成" onclick="document.getElementById('hello').textContent = '歡迎光臨！請問想要點什麼呢？';">
 </p>
 <p>AI 機器人店員：<span id="ok"></span><span id="total"></span></p>
 </body>
