--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
     <title></title>
 </head>
 <body>
-    <!--2、在body中引入-->
-    <script src="main.js"></script>
-  <p>AI 機器人店員：<span id='hello'></span></p>
-<p>客人：我需要<input type="text" id="pizzaNum" class="tag">個 Pizza 還有<input type="text" id="beerNum" class="tag">杯啤酒。
-    <input type="button" id="click" value="點餐完成" onclick="document.getElementById('hello').textContent = '歡迎光臨！請問想要點什麼呢？';">
-</p>
-<p>AI 機器人店員：<span id="ok"></span><span id="total"></span></p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsDWa1ifELKd5_0vimkKXaIzXrvA8DvAzPtPAmlyEDG4nsFg/viewform?embedded=true" width="640" height="477" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+    
 </body>
 </html>
