--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsDWa1ifELKd5_0vimkKXaIzXrvA8DvAzPtPAmlyEDG4nsFg/viewform?embedded=true" id="kim" width="640" height="477" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-    <input type="button" value="按钮" onclick="document.getElementById('kim').contentWindow.document.getElementByName('entry.627327370').textContent='aaa'"/>
+    <input type="button" value="按钮" onclick="document.getElementById('kim').contentWindow.document.getElementByName('YPqjbf').textContent='aaa'"/>
 </body>
 </html>
