--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsDWa1ifELKd5_0vimkKXaIzXrvA8DvAzPtPAmlyEDG4nsFg/viewform?embedded=true" id="kim" width="640" height="477" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
     <input type="text" id='aaa'>
-    <input type="button" value="sa钮" onclick="document.getElementById('kim').contentWindow.document.getElementByName('entry.627327370')"/>
+    <input type="button" value="sa钮" onclick="document.getElementById('kim').contentWindow.document.getElementByName('entry.627327370').value='aaa'"/>
 </body>
 </html>
