--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsDWa1ifELKd5_0vimkKXaIzXrvA8DvAzPtPAmlyEDG4nsFg/viewform?embedded=true" id="kim" width="640" height="477" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
-    <input type="text" id='aaa'>
-    <input type="button" value="sa钮" onclick="document.getElementById('kim').contentWindow.document.getElementByName('entry.627327370').value='aaa'"/>
+    <label id="test">輸入ID</label>
+    <input type="button" value="button" onclick="document.getElementById('test').textContent='試試看'"/>
 </body>
 </html>
